[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pyper"
dynamic = ["version"]
description = "Mix python expressions into bash pipes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Leonid Shamis" }]

[project.urls]
Homepage = "https://github.com/lshamis/pyper"

[project.scripts]
py = "pyper:main"

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.setuptools]
py-modules = ["pyper"]

[tool.setuptools.dynamic]
version = { attr = "pyper.__version__" }

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
